Base de interfaz con JavaFX (navegación entre pantallas)